Prepravljena je prijava, ispravljen prikaz live videa sa kamere.

--- a/KontrolaPristupaDesktop/KontrolaPristupaDesktop/KontrolaPristupaDesktop.csproj
+++ b/KontrolaPristupaDesktop/KontrolaPristupaDesktop/KontrolaPristupaDesktop.csproj
@@ -160,6 +160,7 @@
     <Compile Include="FaceLogIn.xaml.cs">
       <DependentUpon>FaceLogIn.xaml</DependentUpon>
     </Compile>
+    <Compile Include="FaceLogInViewModel.cs" />
     <Compile Include="Korisnik.cs" />
     <Compile Include="PocetnaForma.xaml.cs">
       <DependentUpon>PocetnaForma.xaml</DependentUpon>
